[workspace]
members = ["apps/*", "crates/*", "internal/*", "internal/ui/login"]
resolver = "3"

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
edition = "2024"
license = "MIT-0 OR Apache-2.0"
repository = "https://github.com/NexusSocial/nexus-vr"
rust-version = "1.92.0"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
bevy = "0.17"
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.1"
color-eyre = "0.6.5"
egui = "0.33.3"

# nx dependencies
nx-core.path = "internal/core"
nx-ui-login.path = "internal/ui/login"
nx-ui.path = "internal/ui"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

# Enable a small amount of optimization for our own crates.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
