[package]
name = "identity_server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Self-custodial identity using did:web"
publish = false

[dependencies]
axum.workspace = true
axum-server.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
did-simple.workspace = true
http-body-util.workspace = true
jose-jwk = { workspace = true, default-features = false }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "migrate"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
uuid = { workspace = true, features = ["std", "v4", "serde"] }
rustls-acme = { version = "0.11.1", default-features = false, features = ["ring", "axum"] }
futures.workspace = true

[dev-dependencies]
base64.workspace = true
hex-literal.workspace = true
tower.workspace = true
