[package]
name = "bevy_egui_keyboard"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true

[dev-dependencies]
egui-picking.workspace = true
bevy_mod_picking = { workspace = true, default-features = false, features = [
	"backend_raycast",
	"backend_bevy_ui",
	"backend_sprite",
	"selection",
	"highlight",
] }
