[package]
name = "did-simple"
version = "0.0.1"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Dead simple DIDs"
publish = true

[features]
default = ["ed25519"]
ed25519 = [
	"dep:curve25519-dalek",
	"dep:ed25519-dalek",
]

# Only applications should enable this! If you use did-simple as a dependency,
# don't enable this feature - let applications set it instead.
# Enabling this feature removes the #[forbid(unsafe_code)] crate attribute.
allow-unsafe = []

[dependencies]
bs58 = "0.5.1"
bytes = "1.6.0"
thiserror = "1.0.60"
ed25519-dalek = { version = "2.1.1", optional = true }
curve25519-dalek = { version = "4.1.2", optional = true }

[dev-dependencies]
eyre = "0.6.12"
hex-literal = "0.4.1"
itertools = "0.13.0"
