[package]
name = "egui-picking"
version = "0.1.0"
edition = "2021"
authors = ["Schmarni"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_egui = { git = "https://github.com/Schmarni-Dev/bevy_egui/", branch = "add-worldspace-egui" }
bevy_mod_picking = "0.17.0"
