[package]
name = "egui-picking"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy.workspace = true
# Will move this when the worldspace stuff is merged. Also my fork only because of the bevy version
bevy_egui.workspace = true
bevy_mod_picking.workspace = true


[dev-dependencies]
bevy_mod_picking = { workspace = true, default-features = false, features = [
	"backend_raycast",
	"backend_bevy_ui",
	"backend_sprite",
	"selection",
	"highlight",
] }
