[package]
name = "local-ci"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
octocrab = "0.32.0"
tokio = { version = "1.35.0", features = ["full"]}
rustup-toolchain = "0.1.6"