[package]
name = "picking-xr"
version = "0.1.0"
edition = "2021"
authors = ["Schmarni"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_mod_raycast = "0.16.0"
bevy_picking_core = "0.17.0"
bevy_oxr = { git = "https://github.com/awtterpip/bevy_oxr", default-features = false }
openxr = "0.17.1"

[dev-dependencies]
bevy_mod_picking = "0.17.0"
