[package]
name = "picking-xr"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_mod_raycast.workspace = true
bevy_picking_core.workspace = true
bevy_oxr.workspace = true
openxr.workspace = true

[dev-dependencies]
bevy_mod_picking = "0.17.0"
