[package]
name = "universal-capture"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# Sources are prefixed with `source-`
# Destinations are prefixed with `dest-`
# In-memory sources and destinations are always supported.
source-dx11 = ["dep:dxcapture"]

[dependencies]
dxcapture = { version = "1.1.3", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"

[[bench]]
name = "common_mem_ops"
harness = false

