[package]
name = "nx-ui"
version = "0.0.0"
description = "The UI"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
egui.workspace = true

[dev-dependencies]
bevy-inspector-egui.workspace = true
color-eyre.workspace = true
