[package]
name = "backend"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"]}
serde_json = { version = "1.0.68" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
chrono = { version = "0.4.22", features = ["serde"] }
directories = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
axum-macros = "0.4.1"
anyhow = "1.0.79"
color-eyre.workspace = true
