[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
ehttp = { git = "https://github.com/emilk/ehttp", features = ["multipart", "json"] }
#tokio = { version = "1.0", features = ["full"] }
#reqwest = { version = "0.11.24", features = ["multipart"] }
web-sys = { version = "0.3.68", features = ["Window", "Document", "Element", "HtmlAnchorElement"] }
wasm-bindgen = "0.2.91"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
