[package]
name = "physnet_client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A demo for Networked Physics in VR"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy-inspector-egui.workspace = true
bevy.workspace = true
bevy_flycam.workspace = true
bevy_rapier3d.workspace = true
bytes.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
replicate-client.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-compat.workspace = true
