[package]
name = "rvid-client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A rust based wireless PCVR solution"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy.workspace = true
bevy_oxr.workspace = true
color-eyre.workspace = true
openxr.workspace = true
