[package]
name = "rvid-client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A rust based wireless PCVR solution"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy.workspace = true
bevy_oxr.workspace = true
color-eyre.workspace = true
openxr.workspace = true
openssl-sys = { version = "0.9.97", features = ["vendored"] }
openssl = { version = "0.10.35", features = ["vendored"] }
