[package]
name = "social-client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A social vr demo in bevy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
bevy_mod_inverse_kinematics.workspace = true 
bevy_oxr = { workspace = true, default-features = false }
bevy_vrm.workspace = true
bevy_web_asset.workspace = true
color-eyre.workspace = true
cpal = "0.15.2"
lightyear.workspace = true
openxr.workspace = true
portpicker = "0.1.1"
random-number.workspace = true
rodio = "0.17.3"
social-common.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
egui.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
bevy = { workspace = true, features = [] }
