[package]
name = "social-client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A social vr demo in bevy"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dynlink = ["bevy/dynamic_linking"]

[dependencies]
bevy.workspace = true
bevy_mod_inverse_kinematics.workspace = true
bevy_oxr.workspace = true
bevy_vrm.workspace = true
bevy_web_asset.workspace = true
color-eyre.workspace = true
cpal = "0.15.2"
openxr.workspace = true
portpicker = "0.1.1"
rodio = "0.17.3"
social-common.workspace = true
social-networking.workspace = true
derive_more.workspace = true
picking-xr.workspace = true
egui-picking.workspace = true
bevy_egui.workspace = true
bevy_mod_picking = { workspace = true, default-features = false, features = [
	"backend_raycast",
	"backend_bevy_ui",
	"backend_sprite",
	"selection",
	"highlight",
] }
opus.workspace = true
egui.workspace = true
clap.workspace = true
bevy_schminput = { workspace = true, features = ["xr"] }

# [target.'cfg(not(target_os = "android"))'.dependencies]
bevy-inspector-egui.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
# Not needed for this fork!
# bevy_egui = { workspace = true, default-features = false, features = [
# 	"default_fonts",
# ] }
ndk-context = "0.1.1"
jni = "0.21.1"

[[test]]
name = "render_test"
path = "tests/render_test.rs"
harness = false
