[package]
name = "social-common"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lightyear.workspace = true
bevy.workspace = true
serde.workspace = true
derive_more.workspace = true
tracing.workspace = true
bevy_vrm.workspace = true
color-eyre.workspace = true
portpicker = "0.1.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
egui.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
