[package]
name = "replicate-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A server for the social vr bevy demo"

[dependencies]
base64.workspace = true
clap.workspace = true
color-eyre.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
serde.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
bytes = "1.5.0"
dashmap = "5.5.3"
wtransport.workspace = true
replicate-common.path = "../replicate-common"

[dependencies.tokio]
workspace = true
features = [
	"rt",
	"rt-multi-thread",
	"macros"
]
