[package]
name = "replicate-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A general purpose distributed authority game server"

[dependencies]
base64.workspace = true
bytes.workspace = true
clap.workspace = true
color-eyre.workspace = true
dashmap = "5.5.3"
replicate-common.path = "../replicate-common"
serde.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wtransport.workspace = true

[dependencies.tokio]
workspace = true
features = [
	"rt",
	"rt-multi-thread",
	"macros"
]
