[package]
name = "social-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A server for the social vr bevy demo"

[dependencies]
lightyear.workspace = true
social-common.workspace = true
bevy.workspace = true
bevy_vrm.workspace = true
bevy_web_asset.workspace = true
clap.workspace = true
color-eyre.workspace = true
