[package]
name = "social-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A server for the social vr bevy demo"

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
bevy_vrm.workspace = true
bevy_web_asset.workspace = true
clap.workspace = true
color-eyre.workspace = true
lightyear.workspace = true
social-common.workspace = true
social-networking.workspace = true
