[package]
name = "replicate-common"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared code between replicate-client and replicate-server"

[dependencies]
bytes.workspace = true
futures.workspace = true
pin-project.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false }
tokio-serde.workspace = true
tokio-util.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
