[package]
name = "replicate-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A general purpose distributed authority game server"
publish = false

[dependencies]
base64.workspace = true
bytes = { workspace = true, features = ["serde"] }
clap.workspace = true
color-eyre.workspace = true
dashmap = "5.5.3"
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
eyre.workspace = true
futures.workspace = true
rand.workspace = true
replicate-common.path = "../common"
serde.workspace = true
thiserror.workspace = true
tokio-serde = { workspace = true, features = ["json"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wtransport.workspace = true

[dependencies.tokio]
workspace = true
features = [
	"io-util",
	"macros",
	"rt",
	"rt-multi-thread",
]
